new buildings index

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -42,6 +42,11 @@
 							<span class="glyphicon glyphicon-list"></span>&nbspВсе пользователи
 							<% end %>
 						</li>
+						<li>
+							<%= link_to buildings_path do %>
+							<span class="glyphicon glyphicon-list"></span>&nbspВсе здания
+							<% end %>
+						</li>
 						</ul>
 					</li><li>
 					<%= link_to signout_path, method: "delete" do %>
