--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -62,7 +62,7 @@
 				<div class="form-group">
 					<%= f.label :'Компания:', class: "col-md-3 control-label" %>
 					<div class="col-md-5">
-						<%= select_tag :company, options_from_collection_for_select(@list_contract, 'contract_id', 'company'), :prompt => "Выберите из списка", :class => "form-control" %>
+						<%= select_tag :company, options_from_collection_for_select(@list_contract, 'contract_id', 'company'), :prompt => "Выберите из списка", :class => "form-control", required: "" %>
 					</div>
 				</div>
 			</div>
@@ -70,7 +70,7 @@
 				<div class="form-group">
 					<%= f.label :'№ договора:', class: "col-md-3 control-label" %>
 					<div class="col-md-5">
-						<%= text_field_tag :contract, nil, :placeholder => "Введите № договора", class: "form-control" %>
+						<%= text_field_tag :contract, nil, :placeholder => "Введите № договора", class: "form-control", required: "" %>
 					</div>
 				</div>
 			</div>
@@ -78,7 +78,7 @@
 				<div class="form-group">
 					<%= f.label :'Период договора:', class: "col-md-3 control-label" %>
 					<div class="col-md-5">
-						<%= text_field_tag :period_contract, nil, :placeholder => "Введите время окончания договора", class: "form-control" %>
+						<%= text_field_tag :period_contract, nil, :placeholder => "Введите время окончания договора", class: "form-control", required: "" %>
 					</div>
 				</div>
 			</div>
@@ -86,7 +86,7 @@
 				<div class="form-group">
 					<%= f.label :'Категория заявки:', class: "col-md-3 control-label" %>
 					<div class="col-md-5">
-						<%= f.select :category, [['Немедленно', 1], ['Очень срочно', 2], ['Срочно', 3]], {:prompt => "Выберите из списка"}, {:class =>  "form-control"} %>
+						<%= f.select :category, [['Немедленно', 1], ['Очень срочно', 2], ['Срочно', 3]], {:prompt => "Выберите из списка"}, {:class =>  "form-control", required: ""} %>
 
 					</div>
 				</div>
@@ -96,7 +96,7 @@
 				<div class="form-group">
 					<%= f.label :'Исполнитель:', class: "col-md-3 control-label" %>
 					<div id="workerfield" class="col-md-5">
-					  <%= select_tag :worker, options_from_collection_for_select(@list_worker, 'id', 'name'), :prompt => "Выберите из списка", :class => "form-control" %>
+					  <%= select_tag :worker, options_from_collection_for_select(@list_worker, 'id', 'name'), :prompt => "Выберите из списка", :class => "form-control", required: "" %>
 					</div>	
 				</div>
 			</div>
