new style for warning messages in forms

--- a/app/views/buildings/new.html.erb
+++ b/app/views/buildings/new.html.erb
@@ -6,7 +6,7 @@
 		<div class="form-group">
 			<label class="control-label col-md-3">Объект</label>
 			<div class="col-md-4">
-			<%= f.text_field :name, :placeholder => "Введите № объекта", class: "form-control" %>
+			<%= f.text_field :name, :placeholder => "Введите № объекта", class: "form-control", required: "" %>
 			</div>
 		</div>
 		</div>
@@ -15,7 +15,7 @@
 		<div class="form-group">
 			<label class="control-label col-md-3">Главный адрес объекта</label>
 			<div class="col-md-4">
-			<%= f.text_field :main_address, :placeholder => "Введите главный адрес оъекта", class: "form-control" %>
+			<%= f.text_field :main_address, :placeholder => "Введите главный адрес оъекта", class: "form-control", required: "" %>
 			</div>
 		</div>
 		</div>
