--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,9 @@
 			<%= render 'layouts/header' %>
 		</header>
 		<div class="container">
+
 			<% flash.each do |key, value| %>
-				<div class="alert alert-<%= key %>"><%= value %></div>
+				<div class="alert alert-<%= key %>" style="margin:5px"><%= value %></div>
 			<% end %>
 			<%= yield %>
 			<br>
