--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -57,7 +57,6 @@
 				</div>
 				</div>
 			</div>
-			<br>
 			<div class="row">
 				<div class="form-group">
 					<%= f.label :'Компания:', class: "col-md-3 control-label" %>
@@ -91,7 +90,6 @@
 					</div>
 				</div>
 			</div>
-			<br>
 			<div class="row" id="worker_row">
 				<div class="form-group">
 					<%= f.label :'Исполнитель:', class: "col-md-3 control-label" %>
@@ -101,10 +99,9 @@
 				</div>
 			</div>
 
-			<button id="addbtn" type="button" class="btn btn-default btn-s">
-				<span class="glyphicon glyphicon-plus">Добавить исполнителя</span>
+			<button id="addbtn" type="button" class="btn btn-default btn-xs">
+				<span class="glyphicon glyphicon-plus"></span>
 			</button>
-			<br>
 			<%= f.submit "Сохранить", class: "btn btn-large btn-primary" %>
 		
 		<% end %>
