--- a/app/views/buildings/index.html.erb
+++ b/app/views/buildings/index.html.erb
@@ -10,8 +10,8 @@
 	
 		<% @buildings.each do |b| %>
 			<tr>
-				<td><%= b.name %></td>
 				<td><%= b.main_address %></td>
+				<td><%= b.arrival_address %></td>
 			</tr>
 		<% end %>
 	</table>
