--- a/app/views/requistions/show.html.erb
+++ b/app/views/requistions/show.html.erb
@@ -21,16 +21,16 @@
     <td><%= transcript_of_the_messages(@requistion.type_requistion)+' '+@requistion.info.to_s %></td>
   </tr>
   <tr>
+    <th>Категория</th>
+    <td><%= replacement_empty(@requistion.subtype_requistions) %></td>
+  </tr>
+  <tr>
     <th>Время поступления заявки</th>
     <td><%= Russian::strftime(@requistion.created_at, "%e %B %Y %H:%M") %></td>
   </tr>
   <tr>
     <th>Договор</th>
     <td><%= replacement_empty(@requistion.contract) %></td>
-  </tr>
-  <tr>
-    <th>Категория</th>
-    <td><%= replacement_empty(@requistion.category) %></td>
   </tr>
 </table>
 
