--- a/app/views/requistions/new.html.erb
+++ b/app/views/requistions/new.html.erb
@@ -56,7 +56,7 @@
 		<div class="form-group">
 		  <label class=" col-md-3">Комментарий</label>
 		  <div class="col-md-5">
-			<%= f.text_field :comment, :placeholder =>"Введите описание", class: "form-control" %>
+			<%= f.text_field :requistion_comment, :placeholder =>"Введите описание", class: "form-control" %>
 		</div>
 		</div>
 
