--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<header>
-			<%= render 'layouts/header' %>
+			<%#= render 'layouts/header' %>
 		</header>
 		<div class="container">
 
