--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -12,20 +12,20 @@
 			</div>
 
 
-			<div class="row">
+<!-- 			<div class="row">
 				<div class="form-group">
 					<label class="col-md-3 control-label">Главный адрес</label>
 					<div class="col-md-5">
-					<input class="form-control" type="text" placeholder="<%= @requistion.main_address %>" readonly></input>
+					<input class="form-control" type="text" placeholder="<%#= @requistion.building.arrival_address %>" readonly></input>
 					</div>
 				</div>
 			</div>
-
+ -->
 			<div class="row">
 				<div class="form-group">
 					<label class="col-md-3 control-label">Адрес вызова</label>
 					<div class="col-md-5">
-					<input class="form-control" type="text" placeholder="<%= @requistion.arrival_address %>" readonly></input>
+					<input class="form-control" type="text" placeholder="<%= @requistion.building.arrival_address %>" readonly></input>
 					</div>
 				</div>
 			</div>
@@ -39,6 +39,16 @@
 				</div>
 				</div>
 			</div>
+
+			<div class="row">
+				<div class="form-group">
+					<label class="col-md-3 control-label">Тип заявки</label>
+					<div class="col-md-5">
+					<input class="form-control" type="text" placeholder="<%= transcript_of_the_messages(@requistion.type_requistion) %>" readonly></input>
+				</div>
+				</div>
+			</div>
+
 
 			<div class="row">
 				<div class="form-group">
@@ -57,6 +67,7 @@
 				</div>
 				</div>
 			</div>
+
 			<div class="row">
 				<div class="form-group">
 					<%= f.label :'Компания:', class: "col-md-3 control-label" %>
@@ -65,6 +76,11 @@
 					</div>
 				</div>
 			</div>
+
+			<div class="row" id="versionsDiv">
+  				<%= render :partial => 'versions', :object => @list_contract %>
+			</div>
+
 			<div class="row">
 				<div class="form-group">
 					<%= f.label :'№ договора:', class: "col-md-3 control-label" %>
@@ -73,11 +89,20 @@
 					</div>
 				</div>
 			</div>
+
 			<div class="row">
 				<div class="form-group">
 					<%= f.label :'Период договора:', class: "col-md-3 control-label" %>
 					<div class="col-md-5">
 						<%= text_field_tag :period_contract, nil, :placeholder => "Введите время окончания договора", class: "form-control", required: "" %>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="form-group">
+					<%= f.label :'Описание договора:', class: "col-md-3 control-label" %>
+					<div class="col-md-5">
+						<%= text_field_tag :description, nil, :placeholder => "Введите время окончания договора", class: "form-control", required: "" %>
 					</div>
 				</div>
 			</div>
