--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -103,7 +103,7 @@ $darkblue1 : rgb (68, 73, 156);
 .jumbotron {
 	margin-top: 15px;
 	font-family: "Din Round Pro";
-	background-image: url(http://www.3v-online.ru/images/Bg.png);;
+	background-image: url(<%= asset_path "Bg.png" %>);;
 	height: 285px;
 	h1 {
 		font-weight: 600;
