fix logo in navbar and add new fon for jumbotron

--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -23,7 +23,7 @@ $darkblue1 : rgb (68, 73, 156);
 	// border:none;
 	// border-radius: 0;
 	.logo {
-		margin-top: -8px;
+		margin-top: -6px;
 	}
 	.navbar-brand {
 		color: $colDefault;
@@ -103,7 +103,7 @@ $darkblue1 : rgb (68, 73, 156);
 .jumbotron {
 	margin-top: 15px;
 	font-family: "Din Round Pro";
-	background-image: url(<%= asset_data_uri "Bg.png" %>);
+	background-image: url(<%= asset_data_uri "metal.jpg" %>);
 	height: 285px;
 	h1 {
 		font-weight: 600;
