--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,8 +7,9 @@
             <span class="icon-bar"></span>                        
         	</button>
 			<a class="navbar-brand" href="/">
-			<%=image_tag("Logo.png", size: "39x50", class: "logo", alt: "ЗВ")%>
+			<span><%=image_tag("Logo.png", size: "39x50", class: "logo", alt: "ЗВ")%></span>
 			&nbspЗаявки онлайн</a>
+
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">			
 		<% if signed_in? %>
