add new style for index requistions and remove links to external js, css resourses

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,7 +10,8 @@
  *
  *= require_self
  *= require custom
- *= require dataTables/jquery.dataTables
+ *= require requistions
+ *= require dataTables.bootstrap 
  */
 
 .hidden{
