--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,9 @@
 	<title><%= yield(:title) %></title>
 	<link rel="shortcut icon" href="http://3v-service.ru/a/favicon.ico" type="image/x-icon">
 
-<%= stylesheet_link_tag "application", {media: "all", "data-turbolinks-track" => true} %>
+		
+<%= stylesheet_link_tag "application", {media: "all", type: "text/css", "data-turbolinks-track" => true} %>
+
 
 <%= javascript_include_tag "application", {media: "all", "data-turbolinks-track" => true} %>
 
@@ -34,6 +36,4 @@
 		</footer>
 
 	</body>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="http://cdn.datatables.net/1.10.3/js/jquery.dataTables.min.js"></script>
 </html>
