Change logo + bg

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>                        
         	</button>
 			<a class="navbar-brand" href="/">
-			<span><%=image_tag("Logo.png", size: "39x50", class: "logo", alt: "ЗВ")%></span>
+			<span><%=image_tag("LogoNew.png", size: "36x50", class: "logo", alt: "ЗВ")%></span>
 			&nbspЗаявки онлайн</a>
 
 		</div>
