--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -16,7 +16,7 @@
 	    <th><%= link_to requistion.object,  {:action => :show, :id => requistion.id}, {:method => :get} %></th>
 		<td><%= requistion.main_address %></td>
 		<td><%= Russian::strftime(requistion.created_at, "%e %B %Y %H:%M") %></td>
-		<td><%= if requistion.status.blank? then 'Данных нет' else requistion.status end%></td>
+		<td><%= status_names[requistion.status.to_sym] %></td>
 	    <th><%= link_to edit_requistion_path(requistion) do%>
 	    	<span class="glyphicon glyphicon-pencil"></span>&nbsp
 	    	<% end %>
