--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -72,7 +72,7 @@
 				<div class="form-group">
 					<%= f.label :'Компания:', class: "col-md-3 control-label" %>
 					<div class="col-md-5">
-						<%= select_tag :company, options_from_collection_for_select(@list_contract, 'contract_id', 'company'), :prompt => "Выберите из списка", :class => "form-control", required: "" %>
+						<%= select_tag :company, options_from_collection_for_select(@list_contract, 'company', 'company'), :prompt => "Выберите из списка", :class => "form-control", required: "" %>
 					</div>
 				</div>
 			</div>
