add titles for all workers page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -44,7 +44,12 @@ $(document).ready(function(){
 						</li>
 						<li>
 							<%= link_to users_path do %>
-							<span class="glyphicon glyphicon-list"></span>&nbspВсе пользователи
+							<span class="glyphicon glyphicon-list"></span>&nbsp Клиенты
+							<% end %>
+						</li>
+						<li>
+							<%= link_to workers_path do %>
+							<span class="glyphicon glyphicon-list"></span>&nbsp Рабочие
 							<% end %>
 						</li>
 						<li>
