--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
-<% provide(:title, 'All users') %>
-<h1>Пользователи:</h1>
+<% provide(:title, @name) %>
+<h1><%= @name %></h1>
 <div class="pagination">
 <%= will_paginate previous_label:"предыдущая", next_label:"следующая" %>
 </div>
