change_main_table

--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -131,5 +131,5 @@
 
 			
 			<%= f.submit "Сохранить", class: "btn btn-large btn-primary", id: "submut" %>
-		
+			<%= link_to "Закрыть заявку", {:action => 'check_in'}, {:class => "btn btn-large btn-primary"} %>		
 		<% end %>
