change_main_table

--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -480,7 +480,7 @@
             </tr>
         </tbody>
     </table>
-<<!-- <%# provide(:title, 'All users') %>
+<!-- <%# provide(:title, 'All users') %>
 <h1>Все заявки</h1>
 <table id = "all_requistion" class="table">
 	<thead>
