change_main_table

--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -1,4 +1,4 @@
-<table id="example" class="display" cellspacing="0" width="100%">
+<table id="example" class="table" cellspacing="0" width="100%">
         <thead>
             <tr>
                 <th>Name</th>
