change_main_table

--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -1,23 +1,23 @@
 <table id="example" class="table" cellspacing="0" width="100%">
         <thead>
             <tr>
-                <th>Name</th>
-                <th>Position</th>
-                <th>Office</th>
-                <th>Age</th>
-                <th>Start date</th>
-                <th>Salary</th>
+				<th>Объект</th>
+				<th>Адрес прибытия</th>
+				<th>Время заявки</th>
+			    <th>Статус</th>
+		        <th></th>
+		        <th></th>
             </tr>
         </thead>
  
         <tfoot>
             <tr>
-                <th>Name</th>
-                <th>Position</th>
-                <th>Office</th>
-                <th>Age</th>
-                <th>Start date</th>
-                <th>Salary</th>
+				<th>Объект</th>
+				<th>Адрес прибытия</th>
+				<th>Время заявки</th>
+			    <th>Статус</th>
+		        <th></th>
+		        <th></th>
             </tr>
         </tfoot>
  
