change_main_table

--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -8,7 +8,6 @@
 				<th>Время заявки</th>
 			    <th>Статус</th>
 		        <th></th>
-		        <th></th>
             </tr>
         </thead>
  
@@ -19,50 +18,20 @@
 				<th>Время заявки</th>
 			    <th>Статус</th>
 		        <th></th>
-		        <th></th>
             </tr>
         </tfoot>
     <tbody>
-	<% for requistion in @requistions %>
-	<tr>
-	    <td><%= link_to requistion.object,  {:action => :show, :id => requistion.id}, {:method => :get} %></td>
-		<td><%= requistion.arrival_address %></td>
-		<td><%= Russian::strftime(requistion.created_at, "%e %B %Y %H:%M") %></td>
-		<td><%= status_names[requistion.status.to_sym] %></td>
-<!-- 	    <th><%#= link_to edit_requistion_path(requistion) do%>
-	    	<span class="glyphicon glyphicon-pencil"></span>
-	    	<%# end %>
-	    </th>
- -->    </tr>
-	<% end %>
-	</tbody>
-    </table>
-<!-- <%# provide(:title, 'All users') %>
-<h1>Все заявки</h1>
-<table id = "all_requistion" class="table">
-	<thead>
-	<tr>
-		<th>Объект</th>
-		<th>Адрес прибытия</th>
-		<th>Время заявки</th>
-	    <th>Статус</th>
-        <th></th>
-    </tr>
-    </thead>
-    <tbody>
-	<%# for requistion in @requistions %>
-	<tr>
-	    <th><%#= link_to requistion.object,  {:action => :show, :id => requistion.id}, {:method => :get} %></th>
-		<td><%#= requistion.arrival_address %></td>
-		<td><%#= Russian::strftime(requistion.created_at, "%e %B %Y %H:%M") %></td>
-		<td><%#= status_names[requistion.status.to_sym] %></td>
-	    <th><%#= link_to edit_requistion_path(requistion) do%>
-	    	<span class="glyphicon glyphicon-pencil"></span>&nbsp
-	    	<%# end %>
-	    </th>
-    </tr>
-	<%# end %>
+		<% for requistion in @requistions %>
+		<tr>
+	    	<td><%= link_to requistion.object,  {:action => :show, :id => requistion.id}, {:method => :get} %></td>
+			<td><%= requistion.arrival_address %></td>
+			<td><%= Russian::strftime(requistion.created_at, "%e %B %Y %H:%M") %></td>
+			<td><%= status_names[requistion.status.to_sym] %></td>
+ 	    	<th><%= link_to edit_requistion_path(requistion) do%>
+	    		<span class="glyphicon glyphicon-pencil"></span>
+	    		<% end %>
+	    	</th>
+		</tr>
+		<% end %>
 	</tbody>
 </table>
-
-		 -->
