change_main_table

--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -24,7 +24,7 @@
 		<% for requistion in @requistions %>
 		<tr>
 	    	<td><%= link_to requistion.object,  {:action => :show, :id => requistion.id}, {:method => :get} %></td>
-			<td><%= requistion.arrival_address %></td>
+			<td><%= requistion.building.arrival_address %></td>
 			<td><%= Russian::strftime(requistion.created_at, "%e %B %Y %H:%M") %></td>
 			<td><%= status_names[requistion.status.to_sym] %></td>
  	    	<th><%= link_to edit_requistion_path(requistion) do%>
