--- a/app/views/requistions/edit.html.erb
+++ b/app/views/requistions/edit.html.erb
@@ -130,6 +130,6 @@
 			</div>
 
 			
-			<%= f.submit "Сохранить", class: "btn btn-large btn-primary", id: "submut" %>
+			<%#= f.submit "Сохранить", class: "btn btn-large btn-primary", id: "submut" %>
 			<%= link_to "Закрыть заявку", {:action => 'close'}, {:class => "btn btn-large btn-primary"} %>		
 		<% end %>
