--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -3,30 +3,27 @@
 <table id="example" class="table" cellspacing="0" width="100%">
         <thead>
             <tr>
-                <th colspan="2">Объект</th>
-                <th colspan="4">Подачи заявки</th>
-                <th rowspan="2"=>Статус</th>
-		        <th></th>
-            </tr>
-            <tr>
-            	<th>Название</th>
-				<th>Адрес</th>
-            	<th>Время</th>
-				<th>Число</th>
-				<th>Месяц</th>
-				<th>Год</th>
-            </tr>
-        </thead> 
-        <tfoot>
-            <tr>
-				<th>Название</th>
-				<th>Адрес</th>
+				<th>Объект</th>
+				<th>Адрес прибытия</th>
 				<th>Время</th>
 				<th>Число</th>
 				<th>Месяц</th>
 				<th>Год</th>
-				<th>Статус</th>
-				<th></th>
+			    <th>Статус</th>
+		        <th></th>
+            </tr>
+        </thead>
+ 
+        <tfoot>
+            <tr>
+				<th>Объект</th>
+				<th>Адрес прибытия</th>
+				<th>Время</th>
+				<th>Число</th>
+				<th>Месяц</th>
+				<th>Год</th>
+			    <th>Статус</th>
+		        <th></th>
             </tr>
         </tfoot>
     <tbody>
