add_color_in_main_table

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,7 +11,9 @@
  *= require_self
  *= require custom
  *= require requistions
- *= require dataTables.bootstrap 
+ *= require dataTables/bootstrap/3/jquery.dataTables.bootstrap
+ *= require dataTables/extras/dataTables.tableTools
+ *= require dataTables/extras/dataTables.colVis
  *= require jquery-star-rating
  */
 
