--- a/app/views/requistions/show.html.erb
+++ b/app/views/requistions/show.html.erb
@@ -50,7 +50,7 @@
 
 <br>
 <% if current_user.status == "admin" %>
-  <% if @requistion.status == "done" %>
+  <% if @requistion.status != "done" %>
     <%= button_to "Обработать заявку", edit_requistion_path, method: :get, class: "btn btn-large btn-primary" %>
   <% else %>
     <%= button_to "Обработать заявку", edit_requistion_path, method: :get, class: "disabled"%>
