--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+
 <% provide(:title, @name) %>
 <h1><%= @name %></h1>
 <div class="pagination">
@@ -10,7 +11,32 @@
 	<th>Имя</th>
 	</tr>
   <% @users.each do |user| %>
-    <%= render user %>
+    <% if @name == "Клиенты"%>
+    	<%= render user %>
+    <% else %>
+		<div class="list">
+		<tr>
+		  <td>
+		  <%= link_to user.name, user %>
+		  <div id="calendar">
+		  <%= calendar_for @arrivals, :first_day_of_week => 1 do |t| %>
+			<%= t.head('Пон', 'Вт', 'Ср', 'Чет', 'Пят', 'Суб', 'Воск') %>
+			<%= t.day do |day, arrivals| %>
+  					<%= day.day %>
+			<% end %>
+		  <% end %>
+ 		  </div>
+
+		  <%#= user.arrivals.where(begin_or_end: 0).order(:time).last.time.strftime("%e %B %Y")%>
+		  <% if current_user.admin? && !current_user?(user) %>
+		    <%= link_to user, method: :delete, data: { confirm: "You sure?" } do%>
+		    <span class="glyphicon glyphicon-trash" style="float:right"></span>
+		    <% end %>
+		  <% end %>
+		  </td>
+		</tr>
+		</div> 
+    <% end %>  
   <% end %>
 </table>
 </div>
