--- a/app/views/requistions/index.html.erb
+++ b/app/views/requistions/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Все заявки') %>
 <h1>Все заявки</h1>
-<table id="example" class="table" cellspacing="0" width="100%">
+<table id="requistions" class="table">
 	<thead>
 		<tr>
 			<th>Объект</th>
