--- a/app/views/buildings/show.html.erb
+++ b/app/views/buildings/show.html.erb
@@ -1,10 +1,11 @@
+<% provide(:title, 'Объект') %>
 <h2>Информация об объкте</h2>
 
 <div class="row">
 <div class="col-md-7">
   <table class="table table-bordered">
     <tr>
-      <th>Объукт</th>
+      <th>Объект</th>
       <th><%= @building.name %></th>
     </tr>
     <tr>
