--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
-<%# provide(:title, 'Home') %>
+<% provide(:title, 'Заявки онлайн') %>
 <div class="bg">
 <div class="center jumbotron">
   <h1>Добро пожаловать в сервис онлайн заявок</h1> 
