change_worker_wies

--- a/app/views/requistions/_versions.html.erb
+++ b/app/views/requistions/_versions.html.erb
@@ -1,6 +1,6 @@
 <div class="form-group">
 	<label class=" col-md-3">Описание договора</label>
 	<div class="col-md-5">
-		<%= select_tag "version_id", options_from_collection_for_select(@list_company, "id", "description"), :prompt => "Select a version", :class => "form-control", required: ""  %>	
+		<%= select_tag "version_id", options_from_collection_for_select(@list_company, "id", "description"), :prompt => "Выберите из списка", :class => "form-control", required: ""  %>	
 	</div>
 </div>
