--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,7 +19,7 @@
 		  <td>
 		  <%= link_to user.name, user %>
 		  <div id="calendar">
-		  <%= calendar_for @arrivals, :first_day_of_week => 1 do |t| %>
+		  <%= calendar_for user.arrivals.where("begin_or_end is not null"), :first_day_of_week => 1 do |t| %>
 			<%= t.head('Пон', 'Вт', 'Ср', 'Чет', 'Пят', 'Суб', 'Воск') %>
 			<%= t.day do |day, arrivals| %>
   					<%= day.day %>
