add phone to edit user

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -21,14 +21,10 @@
 		</div>
 
 		<div class="form-group">
-			<label>Пароль</label>
-			<%= f.password_field :password, class: "form-control", required: ""%>
+			<label>Телефон</label>
+			<%= f.password_field :phone, class: "form-control", required: ""%>
 		</div>
-
-		<div class="form-group">
-			<label>Подтверждение пароля</label>
-			<%= f.password_field :password_confirmation, class: "form-control", required: "" %>
-		</div>
+		
 		<br>
 		<%= f.submit "Сохранить", class: "btn btn-large btn-primary" %>
 		<br>
