show phone when edit

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,9 +22,9 @@
 
 		<div class="form-group">
 			<label>Телефон</label>
-			<%= f.password_field :phone, class: "form-control", required: ""%>
+			<%= f.text_field :phone, class: "form-control", required: ""%>
 		</div>
-		
+
 		<br>
 		<%= f.submit "Сохранить", class: "btn btn-large btn-primary" %>
 		<br>
